// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`craftingSteps gets the correct crafting steps 1`] = `
Array [
  Object {
    "components": Array [
      Object {
        "id": 4,
        "quantity": 30,
        "type": "Item",
      },
    ],
    "crafts": 15,
    "disciplines": Array [
      "Armorsmith",
    ],
    "id": 7,
    "minRating": 400,
    "output": undefined,
    "quantity": 15,
    "recipeId": 123,
    "type": "Recipe",
  },
  Object {
    "components": Array [
      Object {
        "id": 7,
        "quantity": 3,
        "type": "Recipe",
      },
    ],
    "crafts": 3,
    "disciplines": Array [],
    "id": 19,
    "minRating": null,
    "output": undefined,
    "quantity": 3,
    "recipeId": undefined,
    "type": "Recipe",
  },
  Object {
    "components": Array [
      Object {
        "id": 19,
        "quantity": 3,
        "type": "Recipe",
      },
    ],
    "crafts": 3,
    "disciplines": Array [],
    "id": 3,
    "minRating": null,
    "output": undefined,
    "quantity": 3,
    "recipeId": undefined,
    "type": "Recipe",
  },
  Object {
    "components": Array [
      Object {
        "id": 7,
        "quantity": 6,
        "type": "Recipe",
      },
    ],
    "crafts": 1,
    "disciplines": Array [],
    "id": 15,
    "minRating": null,
    "output": undefined,
    "quantity": 1,
    "recipeId": undefined,
    "type": "Recipe",
  },
  Object {
    "components": Array [
      Object {
        "id": 7,
        "quantity": 6,
        "type": "Recipe",
      },
      Object {
        "id": 3,
        "quantity": 10,
        "type": "Recipe",
      },
      Object {
        "id": 5,
        "quantity": 4,
        "type": "Recipe",
      },
      Object {
        "id": 15,
        "quantity": 1,
        "type": "Recipe",
      },
      Object {
        "id": 1337,
        "quantity": 1,
        "type": "Recipe",
      },
      Object {
        "id": 1,
        "quantity": 6,
        "type": "Currency",
      },
    ],
    "crafts": 1,
    "disciplines": Array [],
    "id": 1,
    "minRating": null,
    "output": undefined,
    "quantity": 2,
    "recipeId": undefined,
    "type": "Recipe",
  },
]
`;

exports[`craftingSteps gets the correct crafting steps when merging components 1`] = `
Array [
  Object {
    "components": Array [
      Object {
        "id": 6,
        "quantity": 2,
        "type": "Item",
      },
    ],
    "crafts": 2,
    "disciplines": Array [],
    "id": 5,
    "minRating": null,
    "output": undefined,
    "quantity": 2,
    "recipeId": undefined,
    "type": "Recipe",
  },
  Object {
    "components": Array [
      Object {
        "id": 4,
        "quantity": 1,
        "type": "Item",
      },
    ],
    "crafts": 1,
    "disciplines": Array [],
    "id": 3,
    "minRating": null,
    "output": undefined,
    "quantity": 1,
    "recipeId": undefined,
    "type": "Recipe",
  },
  Object {
    "components": Array [
      Object {
        "id": 3,
        "quantity": 2,
        "type": "Recipe",
      },
      Object {
        "id": 5,
        "quantity": 2,
        "type": "Recipe",
      },
    ],
    "crafts": 2,
    "disciplines": Array [],
    "id": 2,
    "minRating": null,
    "output": undefined,
    "quantity": 2,
    "recipeId": undefined,
    "type": "Recipe",
  },
  Object {
    "components": Array [
      Object {
        "id": 2,
        "quantity": 1,
        "type": "Recipe",
      },
      Object {
        "id": 2,
        "quantity": 1,
        "type": "Recipe",
      },
    ],
    "crafts": 1,
    "disciplines": Array [],
    "id": 1,
    "minRating": null,
    "output": undefined,
    "quantity": 1,
    "recipeId": undefined,
    "type": "Recipe",
  },
]
`;

exports[`craftingSteps gets the correct crafting steps with mystic clovers 1`] = `
Array [
  Object {
    "components": Array [
      Object {
        "id": 99999,
        "quantity": 6,
        "type": "Item",
      },
    ],
    "crafts": 3,
    "disciplines": Array [],
    "id": 19675,
    "minRating": null,
    "output": undefined,
    "quantity": 3,
    "recipeId": undefined,
    "type": "Recipe",
  },
  Object {
    "components": Array [
      Object {
        "id": 4,
        "quantity": 24,
        "type": "Item",
      },
    ],
    "crafts": 12,
    "disciplines": Array [
      "Armorsmith",
    ],
    "id": 7,
    "minRating": 400,
    "output": undefined,
    "quantity": 12,
    "recipeId": 123,
    "type": "Recipe",
  },
  Object {
    "components": Array [
      Object {
        "id": 19675,
        "quantity": 3,
        "type": "Recipe",
      },
    ],
    "crafts": 3,
    "disciplines": Array [],
    "id": 19,
    "minRating": null,
    "output": undefined,
    "quantity": 3,
    "recipeId": undefined,
    "type": "Recipe",
  },
  Object {
    "components": Array [
      Object {
        "id": 19,
        "quantity": 3,
        "type": "Recipe",
      },
    ],
    "crafts": 3,
    "disciplines": Array [],
    "id": 3,
    "minRating": null,
    "output": undefined,
    "quantity": 3,
    "recipeId": undefined,
    "type": "Recipe",
  },
  Object {
    "components": Array [
      Object {
        "id": 7,
        "quantity": 6,
        "type": "Recipe",
      },
    ],
    "crafts": 1,
    "disciplines": Array [],
    "id": 15,
    "minRating": null,
    "output": undefined,
    "quantity": 1,
    "recipeId": undefined,
    "type": "Recipe",
  },
  Object {
    "components": Array [
      Object {
        "id": 7,
        "quantity": 6,
        "type": "Recipe",
      },
      Object {
        "id": 3,
        "quantity": 10,
        "type": "Recipe",
      },
      Object {
        "id": 5,
        "quantity": 4,
        "type": "Recipe",
      },
      Object {
        "id": 15,
        "quantity": 1,
        "type": "Recipe",
      },
    ],
    "crafts": 1,
    "disciplines": Array [],
    "id": 1,
    "minRating": null,
    "output": undefined,
    "quantity": 2,
    "recipeId": undefined,
    "type": "Recipe",
  },
]
`;
